<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutToast"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ActivityToast">

    <EditText
        android:id="@+id/txtHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtDHorizontal"
        android:inputType="number" />

    <EditText
        android:id="@+id/txtVertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtDVertical"
        android:inputType="textPersonName|number" />

    <EditText
        android:id="@+id/txtTextoToast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtToast"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/RGHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|clip_horizontal">

            <TextView
                android:id="@+id/txtRgHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|clip_horizontal"
                android:text="@string/txtDHorizontal" />

            <RadioButton
                android:id="@+id/rbIzquierda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|clip_horizontal"
                android:text="@string/Izquierda" />

            <RadioButton
                android:id="@+id/rbMedio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|clip_horizontal"
                android:text="@string/Medio" />

            <RadioButton
                android:id="@+id/rbDerecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|clip_horizontal"
                android:text="@string/Derecha" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/RGVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtRgVertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtDVertical" />

            <RadioButton
                android:id="@+id/rbArriba"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Arriba" />

            <RadioButton
                android:id="@+id/rbCentro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Centro" />

            <RadioButton
                android:id="@+id/rbAbajo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Abajo" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/btnMostrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="mostrar"
        android:text="@string/btnMostrar" />
</LinearLayout>