<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutNotificacion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ActivityNotificacion">

    <EditText
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtTitulo"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtTexto"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtTiempo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtTiempo"
        android:inputType="number" />

    <Button
        android:id="@+id/btnLanzar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLanzar2" />
</LinearLayout>